yamls/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-service-v1.0
  namespace: dev
  labels:
    app: authorization-service
    version: "1.0"
    environment: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorization-service
      version: "1.0"
      environment: development
  template:
    metadata:
      labels:
        app: authorization-service
        version: "1.0"
        environment: development
    spec:
      containers:
      - name: authorization-v1-0-container
        image: 192.168.99.100:5000/authorization-service:v1.4
        ports:
        - containerPort: 9993
